@@ -3,8 +3,6 @@
 #include "Logging_Client_Server.h"
 #include "Logging_Client_Options.h"
 #include "Logging_Client_Task.h"
-#include "Single_Thread_Server_Strategy.h"
-#include "Threadpool_Server_Strategy.h"
 #include "TestLoggerClient_i.h"
 #include "tao/IORTable/IORTable.h"
 #include "ace/Get_Opt.h"
