@@ -15,7 +15,6 @@
 
 #include "tao/PortableServer/Servant_Base.h"
 #include "ace/SString.h"
-#include "Server_Thread_Strategy.h"
 
 // Forward decl.
 class CUTS_TestLoggerClient_i;
@@ -63,9 +62,6 @@ private:
 
   /// Implemenation of the CUTS::TestLoggerClient.
   CUTS_TestLoggerClient_i * client_;
-
-  /// Thread strategy for the server.
-  ACE_Auto_Ptr <CUTS_Logging_Server_Thread_Strategy> thread_strategy_;
 };
 
 #endif  // !defined _CUTS_LOGGING_CLIENT_SERVER_H_
